fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -963,6 +963,7 @@ footer p {
   .hero-logo {
     width: 100px;
     height: 100px;
+    margin-top: 3rem;
   }
 
   .hero-subtitle {
